--- a/src/components/NewTaskForm/NewTaskForm.css
+++ b/src/components/NewTaskForm/NewTaskForm.css
@@ -1,3 +1,15 @@
-.form {
+.new-todo-form {
   margin: 0;
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+input[type="number"],
+input[type="number"]:hover,
+input[type="number"]:focus {
+  appearance: none;
+  -moz-appearance: textfield;
 }
